baobab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ken-baobab-service
  namespace: baobab
spec:
  ports:
    - name: rpc
      protocol: TCP
      port: 8551
      targetPort: 8551
    - name: ws
      protocol: TCP
      port: 8552
      targetPort: 8552
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: ken-baobab
  type: ClusterIP
